tests/baselines/reference/arrayCast.errors.txt
==== tests/cases/compiler/arrayCast.ts (1 errors) ====
    // Should fail. Even though the array is contextually typed with { id: number }[], it still
    // has type { foo: string }[], which is not assignable to { id: number }[].
    <{ id: number; }[]>[{ foo: "s" }];
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2353: Neither type '{ foo: string; }[]' nor type '{ id: number; }[]' is assignable to the other:
!!! error TS2353:   Type '{ foo: string; }' is not assignable to type '{ id: number; }':
!!! error TS2353:     Property 'id' is missing in type '{ foo: string; }'.
    
    // Should succeed, as the {} element causes the type of the array to be {}[]
    <{ id: number; }[]>[{ foo: "s" }, {}]; 